--- a/index.html
+++ b/index.html
@@ -1,11 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tic tac toe</title>
+    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="/styles/overlays.css">
+    <link rel="stylesheet" href="/styles/configurations.css">
 </head>
+
 <body>
-    
+    <div id="backdrop"></div>
+    <header id="main-header">
+        <h1>Play Tic Tac Toe</h1>
+        <p>Built with HTML, CSS, Javascript and love.</p>
+    </header>
+    <main>
+        <aside class="modal" id="config-overlay">
+            <h2>Choose your name.</h2>
+            <form>
+                <div class="form-control">
+                    <label for="player-name">Player name</label>
+                    <input type="text" name="playername" id="player-name">
+                </div>
+                <div>
+                    <button type="button" class="btn btn-alt">Cancel</button>
+                    <button type="submit" class="btn">Confirm</button>
+                </div>
+            </form>
+        </aside>
+        <section id="game-configuration">
+            <ol>
+                <li>
+                    <article>
+                        <h2>Player 1</h2>
+                        <h3>Player Name</h3>
+                        <p class="player-symbol">X</p>
+                        <button class="btn btn-alt">Edit</button>
+                    </article>
+                </li>
+                <li>
+                    <article>
+                        <h2>Player 2</h2>
+                        <h3>Player Name</h3>
+                        <p class="player-symbol">O</p>
+                        <button class="btn btn-alt">Edit</button>
+                    </article>
+                </li>
+            </ol>
+            <button class="btn">Start new game.</button>
+        </section>
+        <section id="active-game">
+            <article>
+                <h3>You won <span id="winner-name">PLAYER NAME</span>!</h3>
+                <p>Click start above to start a new game.</p>
+            </article>
+
+            <p>It is your turn <span id="active-player-name">PLAYER NAME</span>!</p>
+            <ol>
+                <li></li>
+                <li></li>
+                <li></li>
+
+                <li></li>
+                <li></li>
+                <li></li>
+
+                <li></li>
+                <li></li>
+                <li></li>
+            </ol>
+        </section>
+    </main>
 </body>
+
 </html>
