--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="/styles/styles.css">
     <link rel="stylesheet" href="/styles/overlays.css">
     <link rel="stylesheet" href="/styles/configurations.css">
+    <link rel="stylesheet" href="/styles/game.css">
+    <script src="/scripts/config.js" defer></script>
+    <script src="/scripts/game.js" defer></script>
+    <script src="/scripts/app.js" defer></script>
 </head>
 
 <body>
@@ -22,46 +26,47 @@
             <form>
                 <div class="form-control">
                     <label for="player-name">Player name</label>
-                    <input type="text" name="playername" id="player-name">
+                    <input type="text" name="playername" id="player-name" required>
                 </div>
+                <p id="error-message"></p>
                 <div>
-                    <button type="button" class="btn btn-alt">Cancel</button>
-                    <button type="submit" class="btn">Confirm</button>
+                    <button type="reset" class="btn btn-alt" id="cancel-player-config">Cancel</button>
+                    <button type="submit" class="btn" id=" ">Confirm</button>
                 </div>
             </form>
         </aside>
         <section id="game-configuration">
             <ol>
                 <li>
-                    <article>
+                    <article id="player-1-data">
                         <h2>Player 1</h2>
                         <h3>Player Name</h3>
                         <p class="player-symbol">X</p>
-                        <button class="btn btn-alt">Edit</button>
+                        <button class="btn btn-alt" id="edit-player-1-btn" data-player-id='1'>Edit</button>
                     </article>
                 </li>
                 <li>
-                    <article>
+                    <article id="player-2-data">
                         <h2>Player 2</h2>
                         <h3>Player Name</h3>
                         <p class="player-symbol">O</p>
-                        <button class="btn btn-alt">Edit</button>
+                        <button class="btn btn-alt" id="edit-player-2-btn" data-player-id='2'>Edit</button>
                     </article>
                 </li>
             </ol>
             <button class="btn">Start new game.</button>
         </section>
         <section id="active-game">
-            <article>
-                <h3>You won <span id="winner-name">PLAYER NAME</span>!</h3>
+            <article id="game-over">
+                <h2>You won <span id="winner-name">PLAYER NAME</span>!</h2>
                 <p>Click start above to start a new game.</p>
             </article>
 
             <p>It is your turn <span id="active-player-name">PLAYER NAME</span>!</p>
-            <ol>
-                <li></li>
-                <li></li>
-                <li></li>
+            <ol id="game-board">
+                <li>X</li>
+                <li>O</li>
+                <li>X</li>
 
                 <li></li>
                 <li></li>
