--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </article>
                 </li>
             </ol>
-            <button class="btn">Start new game.</button>
+            <button class="btn" id="start-game-btn">Start new game.</button>
         </section>
         <section id="active-game">
             <article id="game-over">
@@ -64,17 +64,17 @@
 
             <p>It is your turn <span id="active-player-name">PLAYER NAME</span>!</p>
             <ol id="game-board">
-                <li>X</li>
-                <li>O</li>
-                <li>X</li>
+                <li data-col="1" data-row="1"></li>
+                <li data-col="2" data-row="1" ></li>
+                <li data-col="3" data-row="1"></li>
 
-                <li></li>
-                <li></li>
-                <li></li>
+                <li data-col="1" data-row="2"></li>
+                <li data-col="2" data-row="2"></li>
+                <li data-col="3" data-row="2"></li>
 
-                <li></li>
-                <li></li>
-                <li></li>
+                <li data-col="1" data-row="3"></li>
+                <li data-col="2" data-row="3"></li>
+                <li data-col="3" data-row="3"></li>
             </ol>
         </section>
     </main>
